# hr

./: README.md  README.rst  pyproject.toml  users.json
src/hr/: cli.py  export_csv.py  export_json.py  parser.py  users.py
